syntax = "proto3";

option csharp_namespace = "MyGrpcService";

package orders;

service OrderService {
    rpc GetOrder (OrderRequest) returns (OrderReply);
}

message OrderRequest {
    int32 id = 1;
}

message OrderReply {
    int32 id = 1;
    int32 customerId = 2;
    string customerName = 3;
    repeated Product products = 4;
}

message Product {
    int32 id = 1;
    string name = 2;
    float price = 3;
}
